objects/agf__QA_Question__c.object
<CustomObject>
    <description>A question to be added to the default test plan.</description>
    <fields>
        <fullName>agf__Category__c</fullName>
        <description>Where the question will be categorized under.</description>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>Admin</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Data Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Error Handling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Functionality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Globalization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Help</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Performance and System Testing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Platform Testing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application Testing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Core Testing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regression Testing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Security</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UI testing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upgrade Script</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>agf__Editable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field determines if the question can be editable. It is only set through the UI so that the question can not be edited from API calls.</description>
        <label>Editable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>agf__External_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>agf__More_Info__c</fullName>
        <description>Provide more info for the question</description>
        <label>More Info</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>agf__Obsolete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The question is no longer valid</description>
        <label>Obsolete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>agf__Question_Text__c</fullName>
        <description>Contains the text of the question.</description>
        <label>Question_Text</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>agf__URL__c</fullName>
        <description>Provide an external URL for more information on the question</description>
        <label>URL</label>
        <type>Url</type>
    </fields>
    <label>Question</label>
    <listViews>
        <fullName>agf__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Question-{0000}</displayFormat>
        <label>Questions Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Questions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>